looks like shit on mobile , gotta fix it LOL

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -26,6 +26,7 @@ body{
     font-family: KHMenu;
     font-size: 80%;
     text-align: center;
+    appearance: none;
  /*   background-repeat: no-repeat;
     background-image:url(images/me_couchPleasant.JPG);
     background-attachment: fixed;
